# docs-compiler

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude/skills/coding-guidelines/python/: SKILL.md
.claude/skills/python-development/: SKILL.md
docs-compiler/: main.py  pyproject.toml
docs-compiler/src/docs_compiler/: __init__.py  config.py  errors.py  main.py  references.py  resolver.py
docs-compiler/src/docs_compiler/formats/: claude.py  plugin.py
docs-compiler/tests/: test_config.py  test_formats.py  test_integration.py  test_references.py  test_resolver.py
documentation/coding-guidelines/: SKILL.md
documentation/development/: azure-mermaid.md  python-guidelines.md  testing-guidelines.md  writing-claude.md  writing-skills.md
documentation/python-development/: python-guidelines.md
