[project]
name = "docs-compiler"
version = "0.1.0"
description = "Compile markdown documentation into agent-ready formats"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
docs-compiler = "docs_compiler.main:main"

[build-system]
requires = ["uv_build>=0.6,<0.7"]
build-backend = "uv_build"
